# Cosmic-Poll

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cancellable_sleep.hpp  compiler_barrier.hpp  main.cpp  program_stoppable_sleep.cpp  program_stoppable_sleep.hpp  run-clang-format.sh  signal_set.hpp
.github/workflows/: cmake.yml
cmake/: FindGDB.cmake  FindTclExpect.cmake  FindTclSQLite3.cmake
dependencies/: CMakeLists.txt
include/copo/sqlite/: sqlite_connection.hpp
src/: CMakeLists.txt  cancellable_sleep.hpp  command_line.cpp  command_line.hpp  compile_paths.cpp  compile_paths.hpp  create_log_db.cpp  create_log_db.hpp  log_db_engine.cpp  log_db_engine.hpp  main.cpp  memory_monitor.cpp  memory_monitor.hpp  observation_logger.cpp  observation_logger.hpp  observation_types.hpp  program_stoppable_sleep.cpp  program_stoppable_sleep.hpp  signal_set.hpp  sqlite_connection.cpp  sqlite_connection.hpp  sqlite_exception.hpp  sqlite_statement.cpp  sqlite_statement.hpp
src/cosmic_poll/: CMakeLists.txt  command_line.cpp  command_line.hpp  compile_paths.hpp  create_log_db.cpp  create_log_db.hpp  log_db_engine.cpp  log_db_engine.hpp  main.cpp  memory_monitor.cpp  memory_monitor.hpp  observation_logger.cpp  observation_logger.hpp  observation_types.hpp  program_stoppable_sleep.hpp  signal_set.hpp
src/sqlite/: CMakeLists.txt  sqlite_connection.cpp  sqlite_statement.cpp
tests/: CMakeLists.txt  end_to_end.tcl  end_to_sqlite.tcl  expect_gdb_helpers.tcl  expect_helpers.tcl  read_barrier.cpp  stop_signal.tcl  test_helpers.tcl
